--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,8 @@
     <title> Bijuteria </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/mvp.css">
+    <link rel="stylesheet" href="/css/mvp.css">
+    <script src="/js/serverCall.js"></script>
   </head>
 
   <body>
