--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title> Bijuteria </title>
+    <title> Biju </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/mvp.css">
