--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <title> <%= Biju.Titulo %> </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/mvp.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="/js/serverCall.js"></script>
   </head>
 
